--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ hr {
       <div class="contact-container">
         <h2>Get in touch</h2>
         <p>If you think we go along together then drop a hii!</p>
-        <button class="contact-button btn btn-primary bg-gradient" href="mailto:mail.to.pruthivi@gmail.com">Contact Me</button>
+        <a class="contact-button btn btn-primary bg-gradient" href="mailto:mail.to.pruthivi@gmail.com">Contact Me</a>
       </div>
     </section>
 
